@@ -271,9 +271,30 @@
       ip addresses.
     </column>
 
-    <column name="acls">
-      Access control rules that apply to packets within the logical switch.
-    </column>
+    <group title="ACL processing">
+      <column name="acls">
+        Access control rules that apply to packets within the logical switch.
+      </column>
+
+      <column name="other_config" key="acl-stateful-bypass">
+        Set this value to a match expression to be used to determine for which
+        traffic the ACL processing should be stateless, without recirculating
+        through connection tracking, regardless of the type of ACL that is
+        hit.
+
+        In normal operation, whenever an ACL associated to a Logical_Switch
+        has action <code>allow-related</code>, all IP traffic gets sent
+        to conntrack and related traffic is allowed.
+
+        If <ref column="other_config" key="acl-stateful-bypass"/> is set to
+        <code>E</code> all <code>allow</code> and <code>allow-related</code>
+        ACLs that match packets for which <code>E</code> is true are applied
+        in a stateless way, without recirculating through connection tracking.
+
+        This is useful when some specific types of traffic do not need
+        stateful processing.
+      </column>
+    </group>
 
     <column name="qos_rules">
       QoS marking and metering rules that apply to packets within the
